--- a/tindevmobile/package.json
+++ b/tindevmobile/package.json
@@ -8,8 +8,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.1",
+    "axios": "^0.19.0",
     "react": "16.8.6",
-    "react-native": "0.60.5"
+    "react-native": "0.60.5",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-reanimated": "^1.2.0",
+    "react-navigation": "^3.12.1"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
