--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "serialize-javascript": "^2.1.2",
     "socket.io-client": "^2.2.0"
   },
   "scripts": {
