--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "minimist": "^1.2.5",
     "mongoose": "^5.6.9",
     "socket.io": "^2.2.0"
   },
