--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "minimist": "^1.2.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.4.1",
     "serialize-javascript": "^2.1.2",
     "socket.io-client": "^2.2.0"
   },
