--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "acorn": "^7.1.1",
     "axios": "^0.19.0",
     "minimist": "^1.2.5",
     "react": "^16.9.0",
