--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "acorn": "^7.1.1",
     "axios": "^0.19.0",
+    "kind-of": "^6.0.3",
     "minimist": "^1.2.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
