--- a/tindevmobile/package.json
+++ b/tindevmobile/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
     "axios": "^0.19.0",
+    "kind-of": "^6.0.3",
     "minimist": "^1.2.5",
     "react": "16.8.6",
-    "react-native": "0.60.5",
+    "react-native": "^0.62.1",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.2.0",
     "react-navigation": "^3.12.1",
