--- a/tindevmobile/package.json
+++ b/tindevmobile/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/async-storage": "^1.6.1",
     "axios": "^0.19.0",
     "kind-of": "^6.0.3",
+    "logkitty": "^0.7.1",
     "minimist": "^1.2.5",
     "react": "16.8.6",
     "react-native": "^0.62.1",
