--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "acorn": "^7.1.1",
     "axios": "^0.19.0",
+    "dot-prop": "^5.2.0",
     "kind-of": "^6.0.3",
     "minimist": "^1.2.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.3",
     "serialize-javascript": "^3.1.0",
     "socket.io-client": "^2.2.0"
   },
